# mini_async_simple

./: .gitignore  CMakeLists.txt  README.md
doc/: async_simple设计.md
include/async_simple/base/: assert.hpp  macro.hpp  move_wrapper.hpp  noncopyable.hpp  try.hpp  try_variant.hpp  unit.hpp
include/async_simple/container/: threadsafe_queue.hpp
include/async_simple/coro/: collect.hpp  coro_concept.hpp  count_event.hpp  detached_coroutine.hpp  future_awaiter.hpp  lazy.hpp  ready_awaiter.hpp  sleep.hpp  via_coroutine.hpp
include/async_simple/executor/: executor.hpp  io_executor.hpp  simple_executor.hpp  simple_io_executor.hpp
include/async_simple/sync/: future.hpp  future_helper.hpp  future_state.hpp  future_trait.hpp  local_state.hpp  promise.hpp
include/async_simple/util/: thread_pool.hpp
test/: async_simple_test.cpp  async_simple_test.hpp  common.hpp  scoped_bench.hpp
test/base/: try_test.cpp  try_variant_test.cpp
test/coro/: future_awaiter_test.cpp  lazy_test.cpp  sleep_test.cpp  via_coroutine_test.cpp
test/sync/: future_state_test.cpp  future_test.cpp
